// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password can render a disable input 1`] = `
<div id="passwordField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="password"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms__label"
  >
    Password
  </label>
  <small id="password-description"
         class="o-forms__additional-info"
  >
    Use 8 or more characters with a mix of letters, numbers &amp; symbols
  </small>
  <div class="o-forms__affix-wrapper js-show-password">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           class="no-mouseflow o-forms__text o-forms__text--suffixed js-field__input js-show-password__password-input js-item__value"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-describedby="password-description"
           aria-required="true"
           required
           disabled
    >
    <span class="o-forms__suffix">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             class="o-forms__checkbox js-show-password__checkbox"
             data-trackable="field-show-password"
      >
      <label for="showPassword"
             class="o-forms__label"
      >
        Show password
      </label>
    </span>
  </div>
  <div class="o-forms__errortext">
    Please enter a valid password
  </div>
</div>
`;

exports[`Password can render a disable input 2`] = `
<div id="passwordField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="password"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms__label"
  >
    Password
  </label>
  <small id="password-description"
         class="o-forms__additional-info"
  >
    Use 8 or more characters with a mix of letters, numbers &amp; symbols
  </small>
  <div class="o-forms__affix-wrapper js-show-password">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           class="no-mouseflow o-forms__text o-forms__text--suffixed js-field__input js-show-password__password-input js-item__value"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-describedby="password-description"
           aria-required="true"
           required
           disabled
    >
    <span class="o-forms__suffix">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             class="o-forms__checkbox js-show-password__checkbox"
             data-trackable="field-show-password"
      >
      <label for="showPassword"
             class="o-forms__label"
      >
        Show password
      </label>
    </span>
  </div>
  <div class="o-forms__errortext">
    Please enter a valid password
  </div>
</div>
`;

exports[`Password can render a pattern attribute 1`] = `
<div id="passwordField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="password"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms__label"
  >
    Password
  </label>
  <small id="password-description"
         class="o-forms__additional-info"
  >
    Use 8 or more characters with a mix of letters, numbers &amp; symbols
  </small>
  <div class="o-forms__affix-wrapper js-show-password">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           class="no-mouseflow o-forms__text o-forms__text--suffixed js-field__input js-show-password__password-input js-item__value"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-describedby="password-description"
           aria-required="true"
           required
           pattern="Whatever"
    >
    <span class="o-forms__suffix">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             class="o-forms__checkbox js-show-password__checkbox"
             data-trackable="field-show-password"
      >
      <label for="showPassword"
             class="o-forms__label"
      >
        Show password
      </label>
    </span>
  </div>
  <div class="o-forms__errortext">
    Please enter a valid password
  </div>
</div>
`;

exports[`Password can render a pattern attribute 2`] = `
<div id="passwordField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="password"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms__label"
  >
    Password
  </label>
  <small id="password-description"
         class="o-forms__additional-info"
  >
    Use 8 or more characters with a mix of letters, numbers &amp; symbols
  </small>
  <div class="o-forms__affix-wrapper js-show-password">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           class="no-mouseflow o-forms__text o-forms__text--suffixed js-field__input js-show-password__password-input js-item__value"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-describedby="password-description"
           aria-required="true"
           required
           pattern="Whatever"
    >
    <span class="o-forms__suffix">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             class="o-forms__checkbox js-show-password__checkbox"
             data-trackable="field-show-password"
      >
      <label for="showPassword"
             class="o-forms__label"
      >
        Show password
      </label>
    </span>
  </div>
  <div class="o-forms__errortext">
    Please enter a valid password
  </div>
</div>
`;

exports[`Password can render as an Error 1`] = `
<div id="passwordField"
     class="o-forms o-forms--wide ncf__field js-field o-forms--error"
     data-ui-item="form-field"
     data-ui-item-name="password"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms__label"
  >
    Password
  </label>
  <small id="password-description"
         class="o-forms__additional-info"
  >
    Use 8 or more characters with a mix of letters, numbers &amp; symbols
  </small>
  <div class="o-forms__affix-wrapper js-show-password">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           class="no-mouseflow o-forms__text o-forms__text--suffixed js-field__input js-show-password__password-input js-item__value"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-describedby="password-description"
           aria-required="true"
           required
    >
    <span class="o-forms__suffix">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             class="o-forms__checkbox js-show-password__checkbox"
             data-trackable="field-show-password"
      >
      <label for="showPassword"
             class="o-forms__label"
      >
        Show password
      </label>
    </span>
  </div>
  <div class="o-forms__errortext">
    Please enter a valid password
  </div>
</div>
`;

exports[`Password can render as an Error 2`] = `
<div id="passwordField"
     class="o-forms o-forms--wide ncf__field js-field o-forms--error"
     data-ui-item="form-field"
     data-ui-item-name="password"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms__label"
  >
    Password
  </label>
  <small id="password-description"
         class="o-forms__additional-info"
  >
    Use 8 or more characters with a mix of letters, numbers &amp; symbols
  </small>
  <div class="o-forms__affix-wrapper js-show-password">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           class="no-mouseflow o-forms__text o-forms__text--suffixed js-field__input js-show-password__password-input js-item__value"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-describedby="password-description"
           aria-required="true"
           required
    >
    <span class="o-forms__suffix">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             class="o-forms__checkbox js-show-password__checkbox"
             data-trackable="field-show-password"
      >
      <label for="showPassword"
             class="o-forms__label"
      >
        Show password
      </label>
    </span>
  </div>
  <div class="o-forms__errortext">
    Please enter a valid password
  </div>
</div>
`;

exports[`Password can render as an Unknown user 1`] = `
<div id="passwordField"
     class="o-forms o-forms--wide ncf__field js-field js-unknown-user-field"
     data-ui-item="form-field"
     data-ui-item-name="password"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms__label"
  >
    Password
  </label>
  <small id="password-description"
         class="o-forms__additional-info"
  >
    Use 8 or more characters with a mix of letters, numbers &amp; symbols
  </small>
  <div class="o-forms__affix-wrapper js-show-password">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           class="no-mouseflow o-forms__text o-forms__text--suffixed js-field__input js-show-password__password-input js-item__value"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-describedby="password-description"
           aria-required="true"
           required
    >
    <span class="o-forms__suffix">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             class="o-forms__checkbox js-show-password__checkbox"
             data-trackable="field-show-password"
      >
      <label for="showPassword"
             class="o-forms__label"
      >
        Show password
      </label>
    </span>
  </div>
  <div class="o-forms__errortext">
    Please enter a valid password
  </div>
</div>
`;

exports[`Password can render as an Unknown user 2`] = `
<div id="passwordField"
     class="o-forms o-forms--wide ncf__field js-field js-unknown-user-field"
     data-ui-item="form-field"
     data-ui-item-name="password"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms__label"
  >
    Password
  </label>
  <small id="password-description"
         class="o-forms__additional-info"
  >
    Use 8 or more characters with a mix of letters, numbers &amp; symbols
  </small>
  <div class="o-forms__affix-wrapper js-show-password">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           class="no-mouseflow o-forms__text o-forms__text--suffixed js-field__input js-show-password__password-input js-item__value"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-describedby="password-description"
           aria-required="true"
           required
    >
    <span class="o-forms__suffix">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             class="o-forms__checkbox js-show-password__checkbox"
             data-trackable="field-show-password"
      >
      <label for="showPassword"
             class="o-forms__label"
      >
        Show password
      </label>
    </span>
  </div>
  <div class="o-forms__errortext">
    Please enter a valid password
  </div>
</div>
`;

exports[`Password render a password input with a label where input ID and Name are the same 1`] = `
<div id="passwordField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="password"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms__label"
  >
    Password
  </label>
  <small id="password-description"
         class="o-forms__additional-info"
  >
    Use 8 or more characters with a mix of letters, numbers &amp; symbols
  </small>
  <div class="o-forms__affix-wrapper js-show-password">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           class="no-mouseflow o-forms__text o-forms__text--suffixed js-field__input js-show-password__password-input js-item__value"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-describedby="password-description"
           aria-required="true"
           required
    >
    <span class="o-forms__suffix">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             class="o-forms__checkbox js-show-password__checkbox"
             data-trackable="field-show-password"
      >
      <label for="showPassword"
             class="o-forms__label"
      >
        Show password
      </label>
    </span>
  </div>
  <div class="o-forms__errortext">
    Please enter a valid password
  </div>
</div>
`;

exports[`Password render a password input with a label where input ID and Name are the same 2`] = `
<div id="passwordField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="password"
     data-validate="required,password"
>
  <label for="password"
         class="o-forms__label"
  >
    Password
  </label>
  <small id="password-description"
         class="o-forms__additional-info"
  >
    Use 8 or more characters with a mix of letters, numbers &amp; symbols
  </small>
  <div class="o-forms__affix-wrapper js-show-password">
    <input type="password"
           id="password"
           name="password"
           placeholder="Enter a password"
           class="no-mouseflow o-forms__text o-forms__text--suffixed js-field__input js-show-password__password-input js-item__value"
           autocomplete="new-password"
           data-trackable="field-password"
           aria-describedby="password-description"
           aria-required="true"
           required
    >
    <span class="o-forms__suffix">
      <input type="checkbox"
             id="showPassword"
             name="showPassword"
             class="o-forms__checkbox js-show-password__checkbox"
             data-trackable="field-show-password"
      >
      <label for="showPassword"
             class="o-forms__label"
      >
        Show password
      </label>
    </span>
  </div>
  <div class="o-forms__errortext">
    Please enter a valid password
  </div>
</div>
`;
